--- a/FileIO/app/src/main/res/layout/activity_main.xml
+++ b/FileIO/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    android:id="@+id/const1"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.fileio.MainActivity">
+    tools:context="com.android.fileio.MainActivity"
+    >
     
     <EditText
         android:id="@+id/edit_main1"
@@ -14,21 +16,24 @@
         android:ems="10"
         android:hint="파일내용입력"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"/>
     
     <GridLayout
         android:id="@+id/grid1"
-        android:layout_width="379dp"
-        android:layout_height="363dp"
+        android:layout_width="382dp"
+        android:layout_height="464dp"
         android:columnCount="2"
         android:rowCount="6"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintVertical_bias="1.0">
     
     
         <Button
