--- a/RouletteApp/app/src/main/res/layout/activity_rotate.xml
+++ b/RouletteApp/app/src/main/res/layout/activity_rotate.xml
@@ -31,7 +31,6 @@
             android:id="@+id/img_wheel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-    
             />
     
         <ImageView
@@ -51,14 +50,25 @@
 
     </FrameLayout>
     
-    <Button
-        android:id="@+id/btn_back_rotate"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/line_bottom"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="447dp"
-        android:text="Back"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/frame1"
+        app:layout_constraintLeft_toLeftOf="parent">
+    
+        <Button
+            android:id="@+id/btn_back_rotate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="280dp"
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="447dp"
+            android:layout_weight="1"
+            android:text="Back"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
