--- a/RouletteApp/app/src/main/res/layout/activity_rotate.xml
+++ b/RouletteApp/app/src/main/res/layout/activity_rotate.xml
@@ -28,6 +28,12 @@
             app:srcCompat="@drawable/roulette"/>-->
     
         <ImageView
+            android:id="@+id/img_wheel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/roulette"/>
+    
+        <ImageView
             android:id="@+id/rpin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
