--- a/SkyHotelApp/app/src/main/res/layout/activity_main.xml
+++ b/SkyHotelApp/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="skyblue.android.skyhotelapp.MainActivity">
+    tools:context="skyblue.android.skyhotelapp.MainActivity"
+    android:orientation="vertical"
+    >
     
-    <LinearLayout
+    <!--Custom Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    
+    
+    <!--<LinearLayout
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -18,7 +44,7 @@
         android:background="@color/DarkGray"
         android:layout_marginStart="8dp"
         android:id="@+id/line_title">
-    
+        
     
         <Button
             android:id="@+id/hotel_info"
@@ -37,148 +63,7 @@
             android:text="고객안내"/>
         
     </LinearLayout>
-    
-    <LinearLayout
-        android:id="@+id/line_hotel_intro"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
+    -->
+  
 
-        app:layout_constraintTop_toBottomOf="@+id/line_title">
-    
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center_horizontal"
-            app:srcCompat="@mipmap/ic_cityhotel"
-            />
-    
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/hotel_main_info1"
-            />
-    </LinearLayout>
-    
-    <Button
-        android:id="@+id/btn_roomInfo"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/circlebutton"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/line_hotel_intro"
-        android:layout_marginLeft="40dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:paddingLeft="12dp"
-        android:drawableStart="@drawable/ic_hotel_roominfo"
-        />
-    
-    <TextView
-        android:id="@+id/txt_roomInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="호텔객실안내"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_roomInfo"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_roomInfo"/>
-    
-    <Button
-        android:id="@+id/btn_reserve"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/circlebutton"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/line_hotel_intro"
-        app:layout_constraintLeft_toRightOf="@+id/btn_roomInfo"
-        android:layout_marginLeft="40dp"
-        android:paddingLeft="12dp"
-        android:drawableStart="@drawable/ic_hotel_reserve"
-        />
-    
-    <TextView
-        android:id="@+id/txt_reserve"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="예약하기"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_reserve"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_reserve"/>
-    
-    <Button
-        android:id="@+id/btn_facilities"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/circlebutton"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/line_hotel_intro"
-        app:layout_constraintLeft_toRightOf="@+id/btn_reserve"
-        android:layout_marginLeft="40dp"
-        android:paddingLeft="12dp"
-        android:drawableStart="@drawable/ic_hotel_service"
-        />
-    
-    <TextView
-        android:id="@+id/txt_facilities"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="호텔편의시설"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_reserve"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_facilities"/>
-    
-    <Button
-        android:id="@+id/btn_location"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/circlebutton"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_roomInfo"
-        android:layout_marginLeft="40dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:paddingLeft="12dp"
-        android:drawableStart="@drawable/ic_hotel_loc"
-        />
-    
-    <TextView
-        android:id="@+id/txt_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="오시는길"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_location"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/btn_location"/>
-    
-    <Button
-        android:id="@+id/btn_phonecall"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/circlebutton"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_facilities"
-        android:layout_marginRight="80dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:paddingLeft="12dp"
-        android:drawableStart="@drawable/ic_hotel_phone"
-        />
-    
-    <TextView
-        android:id="@+id/txt_phonecall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="전화하기"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_phonecall"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_phonecall"/>
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
