--- a/SkyHotelApp/app/src/main/res/layout/activity_reserve.xml
+++ b/SkyHotelApp/app/src/main/res/layout/activity_reserve.xml
@@ -6,5 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="skyblue.android.skyhotelapp.ReserveActivity">
-
+    
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/White"
+        app:srcCompat="@drawable/ic_arrow_left"/>
 </android.support.constraint.ConstraintLayout>
