--- a/S.MiniSeconds/S.MazeRunnerActivity/app/src/main/res/layout/activity_maze_run_main.xml
+++ b/S.MiniSeconds/S.MazeRunnerActivity/app/src/main/res/layout/activity_maze_run_main.xml
@@ -7,8 +7,9 @@
     android:layout_height="match_parent"
     tools:context="seveno.android.mazerunneractivity.MazeRunMainActivity">
     
+    
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_pause"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,72 +17,15 @@
         android:layout_alignRight="@+id/linearLayout1"
         android:onClick="playPause"
         android:text="@string/pause"
-        app:layout_constraintLeft_toRightOf="@+id/gridLayout1"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/gridLayout1"
         android:layout_marginBottom="8dp"
-        />
-    
-    <GridLayout
-        android:id="@+id/gridLayout1"
-        android:layout_width="190dp"
-        android:layout_height="140dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:columnCount="3"
-        android:rowCount="2"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:paddingLeft="2dp"
-        >
-    
-        
-        <Button
-            android:id="@+id/buttonLeft"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="0"
-            android:layout_row="1"
-        
-            android:text="@string/left"/>
-        
-        <Button
-            android:id="@+id/buttonDown"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="1"
-            android:layout_row="1"
-         
-            android:text="@string/down"/>
-        
-        <Button
-            android:id="@+id/buttonRight"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="2"
-            android:layout_row="1"
-           
-            android:text="@string/right"/>
-        
-        <Button
-            android:id="@+id/buttonUp"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="1"
-            android:layout_gravity="left|bottom"
-            android:layout_row="0"
-           
-            android:text="@string/up"/>
-    </GridLayout>
+        android:layout_marginEnd="8dp"/>
     
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="0dp"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,5 +54,52 @@
                 android:layout_weight="0.17"/>
         </LinearLayout>
     </LinearLayout>
+    
+    <GridLayout
+        android:layout_width="150dp"
+        android:layout_height="140dp"
+        android:layout_marginBottom="8dp"
+        android:columnCount="3"
+        android:rowCount="3"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
+    
+        <Button
+            android:id="@+id/btn_right"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_column="2"
+            android:layout_row="2"
+            android:text="@string/right"
+            />
+    
+        <Button
+            android:id="@+id/btn_left"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:text="@string/left"
+            />
+    
+        <Button
+            android:id="@+id/btn_down"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:text="@string/down"
+            />
+    
+        <Button
+            android:id="@+id/btn_up"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:text="@string/up"/>
+    </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
