--- a/SkyHotelApp/app/src/main/res/layout/activity_reserve.xml
+++ b/SkyHotelApp/app/src/main/res/layout/activity_reserve.xml
@@ -8,7 +8,7 @@
     tools:context="skyblue.android.skyhotelapp.ReserveActivity">
     
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/prev_btn_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/White"
