--- a/MiniSeconds/app/src/main/res/layout-land/activity_main.xml
+++ b/MiniSeconds/app/src/main/res/layout-land/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/title_txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4초동안 살아남기"
+        android:text="타이머게임"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
