--- a/MiniSeconds/app/src/main/res/layout/activity_main.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/title_txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4초동안 살아남기"
+        android:text="타이머게임"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -43,6 +43,66 @@
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="@+id/title_txt1"
         app:layout_constraintTop_toBottomOf="@+id/title_txt1"/>
+    
+    <ImageView
+        android:id="@+id/img_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/txt_google2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/common_plus_signin_btn_icon_light_disabled"/>
+    
+    <TextView
+        android:id="@+id/txt_google1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    
+    <TextView
+        android:id="@+id/txt_google2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/txt_google1"
+        app:layout_constraintTop_toBottomOf="@+id/txt_google1"
+        android:text="TextView"/>
+    
+    <TextView
+        android:id="@+id/txt_google3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/txt_google2"
+        app:layout_constraintTop_toBottomOf="@+id/txt_google2"
+        android:text="TextView"/>
+    
+    <TextView
+        android:id="@+id/txt_google4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/txt_google3"
+        app:layout_constraintTop_toBottomOf="@+id/txt_google3"
+        android:text="TextView"/>
+    
+    <TextView
+        android:id="@+id/txt_google5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/txt_google4"
+        app:layout_constraintTop_toBottomOf="@+id/txt_google4"
+        android:text="TextView"/>
+    
+    <TextView
+        android:id="@+id/txt_google6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintLeft_toLeftOf="@+id/txt_google5"
+        app:layout_constraintTop_toBottomOf="@+id/txt_google5"/>
 
 
 </android.support.constraint.ConstraintLayout>
