--- a/MiniSeconds/app/src/main/res/layout/activity_speedy_num_play.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_speedy_num_play.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="seveno.android.miniseconds.SpeedNumGame.SpeedyNumPlay">
+    tools:context="seveno.android.miniseconds.SpeedNumGame.SpeedyNumPlay"
+    android:background="@drawable/main_bg_1"
+    >
     
     
     <LinearLayout
@@ -162,10 +164,9 @@
         <ProgressBar
             android:id="@+id/bar_speedyNum"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:progressDrawable="@drawable/progress_drawable"
-            />
+            android:max="100"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
