--- a/MiniSeconds/app/src/main/res/layout/activity_main.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@+id/txt_google2"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/common_plus_signin_btn_icon_light_disabled"/>
@@ -61,6 +62,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     
@@ -68,39 +70,44 @@
         android:id="@+id/txt_google2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@+id/txt_google1"
-        app:layout_constraintTop_toBottomOf="@+id/txt_google1"
-        android:text="TextView"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_google1"/>
     
     <TextView
         android:id="@+id/txt_google3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@+id/txt_google2"
-        app:layout_constraintTop_toBottomOf="@+id/txt_google2"
-        android:text="TextView"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_google2"/>
     
     <TextView
         android:id="@+id/txt_google4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@+id/txt_google3"
-        app:layout_constraintTop_toBottomOf="@+id/txt_google3"
-        android:text="TextView"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_google3"/>
     
     <TextView
         android:id="@+id/txt_google5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@+id/txt_google4"
-        app:layout_constraintTop_toBottomOf="@+id/txt_google4"
-        android:text="TextView"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_google4"/>
     
     <TextView
         android:id="@+id/txt_google6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@+id/txt_google5"
         app:layout_constraintTop_toBottomOf="@+id/txt_google5"/>
 
