--- a/MiniSeconds/app/src/main/res/layout-land/activity_speedy_num_play.xml
+++ b/MiniSeconds/app/src/main/res/layout-land/activity_speedy_num_play.xml
@@ -5,38 +5,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="seveno.android.miniseconds.SpeedNumGame.SpeedyNumPlay"
     android:background="@drawable/main_bg_1"
     >
-    
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="576dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-    
-        <TextView
+     <!--   <TextView
             android:id="@+id/txt_speedy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:text="숫자를 오름차순으로 입력"
-            android:layout_weight="1"
-            />
+            android:text="숫자를 오름차순으로 입력"
+           />-->
+   
     
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+       >
+        
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txt_speedy_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="시간"
             android:layout_weight="1"
-            />
+            android:text="시간"/>
+    
+        <TextView
+            android:id="@+id/txt_speedyError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Error : "/>
+        
     </LinearLayout>
     
     <GridLayout
@@ -48,7 +53,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-    
+        
+        
         <Button
             android:id="@+id/SpeedyBtn_1"
             android:layout_width="wrap_content"
@@ -68,10 +74,10 @@
             android:layout_column="1"
             android:layout_margin="2dp"
             android:layout_row="0"
+            android:layout_weight="1"
             android:onClick="btn_SpeedyClick"
             android:text="2"
-            android:typeface="serif"
-            />
+            android:typeface="serif"/>
     
         <Button
             android:id="@+id/SpeedyBtn_3"
@@ -84,7 +90,7 @@
             android:text="3"
             android:typeface="serif"
             />
-    
+        
         <Button
             android:id="@+id/SpeedyBtn_4"
             android:layout_width="wrap_content"
@@ -95,7 +101,7 @@
             android:text="4"
             android:typeface="serif"
             />
-    
+        
         <Button
             android:id="@+id/SpeedyBtn_5"
             android:layout_width="wrap_content"
@@ -106,7 +112,7 @@
             android:text="5"
             android:typeface="serif"
             />
-    
+        
         <Button
             android:id="@+id/SpeedyBtn_6"
             android:layout_width="wrap_content"
@@ -117,7 +123,7 @@
             android:text="6"
             android:typeface="serif"
             />
-    
+        
         <Button
             android:id="@+id/SpeedyBtn_7"
             android:layout_width="wrap_content"
@@ -128,7 +134,7 @@
             android:text="7"
             android:typeface="serif"
             />
-    
+        
         <Button
             android:id="@+id/SpeedyBtn_8"
             android:layout_width="wrap_content"
@@ -139,7 +145,7 @@
             android:text="8"
             android:typeface="serif"
             />
-    
+        
         <Button
             android:id="@+id/SpeedyBtn_9"
             android:layout_width="wrap_content"
@@ -153,24 +159,22 @@
     </GridLayout>
     
     <LinearLayout
-        android:id="@+id/barLayout_speedyNum"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
-        
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/linearLayout"
+        android:layout_marginStart="8dp">
+    
         <ProgressBar
             android:id="@+id/bar_speedyNum"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="100"
-            />
+            android:layout_height="40dp"
+            android:max="100"/>
     </LinearLayout>
-
 
 </android.support.constraint.ConstraintLayout>
