--- a/MiniSeconds/app/src/main/res/layout/activity_speedy_num_play.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_speedy_num_play.xml
@@ -9,31 +9,39 @@
     tools:context="seveno.android.miniseconds.SpeedNumGame.SpeedyNumPlay"
     android:background="@drawable/main_bg_1"
     >
-    
+     <!--   <TextView
+            android:id="@+id/txt_speedy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="숫자를 오름차순으로 입력"
+           />-->
+   
     
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    
-        <TextView
-            android:id="@+id/txt_speedy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:text="숫자를 오름차순으로 입력"/>
-    
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+       >
+        
         <TextView
             android:id="@+id/txt_speedy_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="시간"/>
+    
+        <TextView
+            android:id="@+id/txt_speedyError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Error : "/>
+        
     </LinearLayout>
     
     <GridLayout
@@ -58,7 +66,7 @@
             android:text="1"
             android:typeface="serif"
             />
-        
+    
         <Button
             android:id="@+id/SpeedyBtn_2"
             android:layout_width="wrap_content"
@@ -66,11 +74,11 @@
             android:layout_column="1"
             android:layout_margin="2dp"
             android:layout_row="0"
+            android:layout_weight="1"
             android:onClick="btn_SpeedyClick"
             android:text="2"
-            android:typeface="serif"
-            />
-        
+            android:typeface="serif"/>
+    
         <Button
             android:id="@+id/SpeedyBtn_3"
             android:layout_width="wrap_content"
