--- a/MiniSeconds/app/src/main/res/layout/activity_finish_screen_a.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_finish_screen_a.xml
@@ -56,7 +56,7 @@
         android:typeface="serif"/>
     
     <Button
-        android:id="@+id/btn_a_nextGame"
+        android:id="@+id/btn_ReturnMainGame"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
