--- a/MiniSeconds/app/src/main/res/layout/activity_finish_screen.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_finish_screen.xml
@@ -47,7 +47,7 @@
         android:typeface="serif"/>
     
     <TextView
-        android:id="@+id/textview_position"
+        android:id="@+id/fin_speedy_score"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
