--- a/MiniSeconds/app/src/main/res/layout-land/activity_speedy_num_play.xml
+++ b/MiniSeconds/app/src/main/res/layout-land/activity_speedy_num_play.xml
@@ -27,13 +27,20 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
        >
-        
+    
         <TextView
             android:id="@+id/txt_speedy_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="시간"/>
+    
+        <TextView
+            android:id="@+id/txt_speedy_score"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="score :"/>
     
         <TextView
             android:id="@+id/txt_speedyError"
