--- a/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_avoid_star_main.xml
@@ -20,52 +20,52 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-    
+        
         <ImageView
             android:id="@+id/img_star_1"
             android:layout_width="60dp"
             android:layout_height="60dp"
-
+            
             android:layout_weight="1"
             app:srcCompat="@android:drawable/btn_star"/>
-    
+        
         <ImageView
             android:id="@+id/img_star_2"
             android:layout_width="60dp"
             android:layout_height="60dp"
-
+            
             android:layout_weight="1"
             app:srcCompat="@android:drawable/btn_star"/>
-    
+        
         <ImageView
             android:id="@+id/img_star_3"
             android:layout_width="60dp"
             android:layout_height="60dp"
-
+            
             android:layout_weight="1"
             app:srcCompat="@android:drawable/btn_star"/>
-    
+        
         <ImageView
             android:id="@+id/img_star_4"
             android:layout_width="60dp"
             android:layout_height="60dp"
-
+            
             android:layout_weight="1"
             app:srcCompat="@android:drawable/btn_star"/>
-    
+        
         <ImageView
             android:id="@+id/img_star_5"
             android:layout_width="60dp"
             android:layout_height="60dp"
-
+            
             android:layout_weight="1"
             app:srcCompat="@android:drawable/btn_star"/>
-    
+        
         <ImageView
             android:id="@+id/img_star_6"
             android:layout_width="60dp"
             android:layout_height="60dp"
-
+            
             android:layout_weight="1"
             app:srcCompat="@android:drawable/btn_star"/>
 
@@ -83,28 +83,30 @@
 
     </LinearLayout>-->
     
+    
     <LinearLayout
-        android:id="@+id/layout_avoidTarget"
+        android:id="@+id/line_character"
         android:layout_width="368dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="80dp"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="-3dp"
+        android:layout_weight="1"
         android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="@+id/layout_aGamebg1"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_aGamebg1">
         
-        
-      <!--  <seveno.android.miniseconds.avoidstargame.KnightView
-            android:id="@+id/img_KnightRun"
-            android:layout_width="80px"
-            android:layout_height="80px"
+        <ImageView
+            android:id="@+id/img_knight1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            >
-            
-        </seveno.android.miniseconds.avoidstargame.KnightView>-->
-    
-    
-       
+            android:layout_weight="1"
+            app:srcCompat="@drawable/knight"/>
     </LinearLayout>
+    
+    
     
     <LinearLayout
         android:id="@+id/layout_aProgress"
@@ -125,5 +127,7 @@
             android:max="100"
             />
     </LinearLayout>
+    
+    
 
 </android.support.constraint.ConstraintLayout>
