--- a/MiniSeconds/app/src/main/res/layout/activity_finish_screen_a.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_finish_screen_a.xml
@@ -60,7 +60,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:onClick="btn_a_NextGame"
+        android:onClick="btn_ReturnMainGame"
         android:text="@string/button_NextGame"
         android:textSize="@dimen/text_size"
         android:typeface="serif"/>
