--- a/MiniSeconds/app/src/main/res/layout/activity_bubble_game.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_bubble_game.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
+    android:id="@+id/frame1"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="seveno.android.miniseconds.BubbleShooter.BubbleGame">
+    
     <LinearLayout
         android:id="@+id/linear_text"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="top"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:orientation="vertical"
-        android:layout_gravity="top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         >
@@ -31,13 +33,13 @@
         android:id="@+id/linear_1"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_gravity="bottom"
         >
         
         <ProgressBar
@@ -48,11 +50,11 @@
             android:max="100"/>
     </LinearLayout>
     
-   <seveno.android.miniseconds.BubbleShooter.BubbleGameView
+  <!--<seveno.android.miniseconds.BubbleShooter.BubbleGameView
         android:id="@+id/mBubbleGameView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    
+        android:layout_height="match_parent"/>-->
+
 </FrameLayout>
     <!-- <LinearLayout
            android:id="@+id/linear_text"
