--- a/MiniSeconds/app/src/main/res/layout/activity_bubble_game.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_bubble_game.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="seveno.android.miniseconds.BubbleShooter.BubbleGame">
+    tools:context="seveno.android.miniseconds.BubbleShooter.BubbleGame"
+    android:background="@drawable/bubble_sky"
+    >
     
     <LinearLayout
         android:id="@+id/linear_text"
@@ -28,6 +30,19 @@
             android:text="Score : "/>
     </LinearLayout>
     
+    
+    <TextView
+        android:id="@+id/countdown_view_b"
+        android:layout_width="300dp"
+        android:layout_height="320dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="20dp"
+        android:gravity="center_horizontal"
+        android:text="3"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="300dp"
+        />
     
     <LinearLayout
         android:id="@+id/linear_1"
